# rust-chess-stat-recorder

./: .gitignore  Cargo.toml  README.md  config.toml  copy_result_files.sh  rare_checkmates.csv  run_all.sh
src/: common.py  config.rs  enums.rs  error.rs  file_util.rs  game.rs  game_data.rs  game_parser.rs  game_player_data.rs  helpers.rs  lichess_util.rs  main.rs  multichannel_parser.rs  num_games_dict.py  parallel_parser.rs  parser.py  parser.rs  plotter.rs  plotting.rs  queue_producer.py  rabbitmq_handler.rs  ui.rs  util.rs  validator.rs  visualize.py
src/game_parser/: enums.rs  game.rs  game_data.rs  game_player_data.rs  validator.rs
src/ui/: box_ui.rs  file_progress.rs  util.rs
src/util/: file_util.rs  helpers.rs  lichess_util.rs  progress.rs  traits.rs
visualize/: common.py  moves.py  parser.py  queue_producer.py
