[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
lto = "thin"


[package]
name = "rust-chess-stat-recorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = "0.4.2"
chrono = "0.4.23"
core_affinity = "0.8.0"
crossbeam = "0.8.2"
pgn-reader = "0.22.0"
rayon = "1.6.1"
regex = "1.7.1"
shakmaty = "0.23"
zstd = "0.12.3"

[[bin]]
edition = "2021"
name = "rust_chess"
path = "src/main.rs"
